<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tglEvent"
            android:textColor="@android:color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/tanggal_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmpEvent"
            android:textColor="@android:color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/tempat_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jamEvent"
            android:textColor="@android:color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/jam_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:focusable="false"
            android:layout_gravity="end"
            android:text="Edit Event"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"/>

        <Button
            android:id="@+id/btn_hapus"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:focusable="false"
            android:layout_gravity="end"
            android:text="hapus event"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:background="@android:color/holo_red_light"/>
    </LinearLayout>

</LinearLayout>